--- a/app/views/grams/edit.html.erb
+++ b/app/views/grams/edit.html.erb
@@ -1,4 +1,9 @@
-<%= simple_form_for @gram do |x| %>
-	<%= x.input :message %>
-	<%= x.submit 'Update' %>
-<% end %>
+<div class="col-10 offset-1 col-sm-8 offset-sm-2 col-md-6 offset-md-3 card form">
+<h2>Edit Gram</h2>
+
+	<%= simple_form_for @gram do |x| %>
+		<%= x.input :message %>
+		<%= x.input :picture %>
+		<%= x.submit 'Update', class: 'my-btn' %>
+	<% end %>
+</div>
