--- a/app/views/grams/new.html.erb
+++ b/app/views/grams/new.html.erb
@@ -1,7 +1,11 @@
-<h1>Enter New Gram...</h1>
+<div class="col-10 offset-1 col-sm-8 offset-sm-2 col-md-6 offset-md-3 card form">
 
-<%= simple_form_for @gram do |x| %>
-	<%= x.input :message %>
-	<%= x.input :picture %>
-	<%= x.submit "Post!" %>
-<% end %>
+	<h1>Enter New Gram...</h1>
+
+	<%= simple_form_for @gram do |x| %>
+		<%= x.input :message %>
+		<%= x.input :picture %>
+		<%= x.submit "Post!", class: 'my-btn' %>
+	<% end %>
+
+</div>
