Display username as marquee element

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -36,7 +36,8 @@ body {
 	border-radius: .25rem;
 	box-shadow: 0 1px 0 rgba(0,0,0,0.25);
 	border: 1px solid #e8e8e8;
-	margin-top: 40px;
+	margin-top: 10px;
+	margin-bottom: 20px;
 	padding: 0;
 }
 
@@ -104,4 +105,10 @@ input {
 	color: #125688;
 	font-weight: bold;
 	font-size: 18px;
+}
+
+.username {
+	font-weight: bold;
+	color: #1E1EDF;
+	text-align: center;
 }
