--- a/app/views/grams/index.html.erb
+++ b/app/views/grams/index.html.erb
@@ -1,4 +1,10 @@
 <div class="col-10 offset-1 col-sm-8 offset-sm-2 col-md-6 offset-md-3">
+	<% if current_user %>
+		<br />
+		<div class="username">
+			<h5><marquee behavior=scroll direction="right" scrollamount="20">Welcome, <%= current_user.email %>!</marquee></h5>
+		</div>
+	<% end %>
 	<% @grams.each do |gram| %>
 	<div class="card">
 		<div class="handle"><%= gram.user.email %></div>
